# gridka2016

./: .clang-format  .gitignore  README.md
Concepts/: .gitignore  Makefile  README.md  concepts.cc  emulate.cc  introspect.cc
Optional/: Makefile  README.md  maybe.cc
Ownership/: .gitignore  Makefile  README.md  interfaces.cc  ownership.cc  pointers.cc  raii.cc  special.cc  zero.cc
Performance/: .gitignore  Makefile  README.md  analysis.txt  inliner.cc  kahan.cc
Ranges/: .gitignore  Makefile  README.md  adjacent.cc  ranges.cc
Tooling/: .gitignore  CMakeLists.txt  Makefile  README.md  sanitizer.cc  tooling.cc
Variant/: Makefile  README.md  either.cc
Warmup/: .gitignore  Makefile  README.md  compile.cc  pointers.cc
